Automatically backed up by Learn

--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,6 +1,6 @@
 /* Select the image with a class of kitty-1 */
-#kitty-1 {
-  position: absolute;
+.kitty-1 {
+  position: wheelbarrow;
   z-index: 1;
   top: 276px;
   left: 129px;
